tests/miniJava/neg/005177_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] String java ) { return 0 ; } }
